--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,48 +1,55 @@
 <div class="container-fluid">
 
-  <div [ngClass]="(layoutIsMainLeft ? 'float-left width-' + widthLeft : 'float-right width-' + widthRight)" class="pl-2">
-    <router-outlet></router-outlet>
-  </div>
+  <div class="row">
 
-  <div [ngClass]="(layoutIsMainLeft ? 'float-right width-' + widthRight : 'float-left width-' + widthLeft)" class="vh-100">
+    <!-- Main outlet -->
+    <div [ngClass]="(layoutIsMainLeft ? 'order-1 col-' + widthLeft : 'order-3 col-' + widthRight)">
+      <router-outlet></router-outlet>
+    </div>
 
-    <ul class="nav nav-tabs mt-2 ml-1 mr-1">
-      <li class="nav-item">
-        <a [routerLink]="['', { outlets: {sidebar: ['manage']} }]" class="nav-link text-black-50"
-           routerLinkActive="active">{{'NAV_MANAGE'|translate}}</a>
-      </li>
-      <li class="nav-item">
-        <a [routerLink]="['', { outlets: {sidebar: ['edit']} }]" class="nav-link text-black-50 disabled"
-           data-placement="bottom" data-toggle="tooltip" routerLinkActive="active"
-           title="{{'NAV_EDIT_TT_INFO' | translate}}">
-          {{'NAV_EDIT'|translate}}</a>
-      </li>
-      <li class="nav-item">
-        <a [routerLink]="['', { outlets: {sidebar: ['compare']} }]" class="nav-link text-black-50 disabled"
-           data-placement="bottom" data-toggle="tooltip" routerLinkActive="active"
-           title="{{'NAV_COMPARE_TT_INFO' | translate}}">{{'NAV_COMPARE'|translate}}</a>
-      </li>
-    </ul>
-    <router-outlet name="sidebar"></router-outlet>
-  </div>
-
-  <div class="vh-100 drag-bar float-right">
-    <div class="btn-group-vertical">
-      <button class="btn btn-sm btn-secondary btnLayout" (click)="increaseWidthRight()">
-        <fa-icon [icon]="faArrowLeft"></fa-icon>
-      </button>
-      <button class="btn btn-sm btn-secondary btnLayout" (click)="increaseWidthLeft()">
-        <fa-icon [icon]="faArrowRight"></fa-icon>
-      </button>
-      <button class="btn btn-sm btn-secondary btnLayout" (click)="resetWidht()">
-        <fa-icon [icon]="faRedo"></fa-icon>
-      </button>
-      <button class="btn btn-sm btn-warning btnLayout" (click)="flipLayout()"
-              data-toggle="tooltip"
-              ngbTooltip="{{'MAIN_INFO_TT_FLIP' | translate}}" placement="bottom" role="button">
-        <fa-icon [icon]="faExchangeAlt"></fa-icon>
-      </button>
+    <!-- Grey bar -->
+    <div class="order-2">
+      <div class="drag-bar">
+        <div class="btn-group-vertical">
+          <button class="btn btn-sm btn-secondary btnLayout" (click)="increaseWidthRight()">
+            <fa-icon [icon]="faArrowLeft"></fa-icon>
+          </button>
+          <button class="btn btn-sm btn-secondary btnLayout" (click)="increaseWidthLeft()">
+            <fa-icon [icon]="faArrowRight"></fa-icon>
+          </button>
+          <button class="btn btn-sm btn-secondary btnLayout" (click)="resetWidth()">
+            <fa-icon [icon]="faRedo"></fa-icon>
+          </button>
+          <button class="btn btn-sm btn-warning btnLayout" (click)="flipLayout()"
+                  role="button">
+            <fa-icon [icon]="faExchangeAlt"></fa-icon>
+          </button>
+        </div>
       </div>
-  </div>
+    </div>
 
+    <!-- Sidebar outlet -->
+    <div [ngClass]="(layoutIsMainLeft ? 'order-3 col-' + widthRight : 'order-1 col-' + widthLeft)">
+
+      <ul class="nav nav-tabs mt-2 ml-1 mr-1">
+        <li class="nav-item">
+          <a [routerLink]="['', { outlets: {sidebar: ['manage']} }]" class="nav-link text-black-50"
+             routerLinkActive="active">{{'NAV_MANAGE'|translate}}</a>
+        </li>
+        <li class="nav-item">
+          <a [routerLink]="['', { outlets: {sidebar: ['edit']} }]" class="nav-link text-black-50 disabled"
+             data-placement="bottom" data-toggle="tooltip" routerLinkActive="active"
+             title="{{'NAV_EDIT_TT_INFO' | translate}}">
+            {{'NAV_EDIT'|translate}}</a>
+        </li>
+        <li class="nav-item">
+          <a [routerLink]="['', { outlets: {sidebar: ['compare']} }]" class="nav-link text-black-50 disabled"
+             data-placement="bottom" data-toggle="tooltip" routerLinkActive="active"
+             title="{{'NAV_COMPARE_TT_INFO' | translate}}">{{'NAV_COMPARE'|translate}}</a>
+        </li>
+      </ul>
+      <router-outlet name="sidebar"></router-outlet>
+
+    </div>
+  </div>
 </div>
