--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,87 +1,12 @@
 .drag-bar {
   background-color: #f1f1f1;
-  width: 32px;
-  min-height: 100%;
+  height: 100vh;
 }
 
 .btnLayout {
-  display: none;
+  visibility: hidden;
 
   .drag-bar:hover & {
-    display: block;
+    visibility: visible;
   }
 }
-
-.width-8 {
-  width: 8%;
-}
-
-.width-10 {
-  width: 10%;
-}
-
-.width-18 {
-  width: 18%;
-}
-
-.width-20 {
-  width: 20%;
-}
-
-.width-28 {
-  width: 28%;
-}
-
-.width-30 {
-  width: 30%;
-}
-
-.width-38 {
-  width: 38%;
-}
-
-.width-40 {
-  width: 40%;
-}
-
-.width-48 {
-  width: 48%;
-}
-
-.width-50 {
-  width: 50%;
-}
-
-.width-58 {
-  width: 58%;
-}
-
-.width-60 {
-  width: 60%;
-}
-
-.width-68 {
-  width: 68%;
-}
-
-.width-70 {
-  width: 70%;
-}
-
-.width-78 {
-  width: 78%;
-}
-
-.width-80 {
-  width: 80%;
-}
-
-.width-88 {
-  width: 88%;
-}
-
-.width-90 {
-  width: 90%;
-}
-
-
