--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div class="row">
 
     <!-- Main outlet -->
-    <div [ngClass]="(layoutIsMainLeft ? 'order-1 w-' + widthLeft : 'order-3 w-' + widthRight)">
+    <div [ngClass]="(layoutIsMainLeft ? 'order-1 p-2 w-' + widthLeft : 'order-3 p-2 w-' + widthRight)">
       <router-outlet></router-outlet>
     </div>
 
