[WIP] using cx2js for rendering networks, currently working on understanding their mappings format

--- a/src/app/components/sidebar-edit/sidebar-edit.component.html
+++ b/src/app/components/sidebar-edit/sidebar-edit.component.html
@@ -308,7 +308,7 @@
         <label for="highlightNodesHex">{{'SIDEBAR_EDIT_LABEL_HEX_NODE' | translate}}</label>
         <input [(ngModel)]="highlightNodes" class="form-control mb-2 col-10" id="highlightNodesHex"
                name="highlightNodesHex"
-               placeholder="#0000ff" type="text">
+               placeholder="#ff0000" type="text">
         <span [ngStyle]="{'background-color': highlightNodes}" class="ml-2 mb-2 col badge badge-pill border">
           &nbsp;
         </span>
@@ -319,7 +319,7 @@
         <label for="highlightEdgesHex">{{'SIDEBAR_EDIT_LABEL_HEX_EDGE' | translate}}</label>
         <input [(ngModel)]="highlightEdges" class="form-control mb-2 col-10" id="highlightEdgesHex"
                name="highlightEdgesHex"
-               placeholder="#ff00ff" type="text">
+               placeholder="#ff0000" type="text">
         <span [ngStyle]="{'background-color': highlightEdges}" class="ml-2 mb-2 col badge badge-pill border">
           &nbsp;
         </span>
