--- a/src/app/components/main-mappings/main-mappings.component.html
+++ b/src/app/components/main-mappings/main-mappings.component.html
@@ -11,148 +11,232 @@
 
   <hr>
 
-  <div *ngIf="selectedMapping">
-    <span *ngFor="let map of selectedMapping">
+  <span *ngIf="isDiscrete then discreteOverview else continuousOverview"></span>
 
-      <table *ngIf="map && map.chartValid" class="table table-bordered">
-        <thead>
-        <tr>
-          <th>{{map.title[1]}}</th>
-          <th>
-            <button *ngIf="givenMapType.startsWith('n')"
-                    [routerLink]="['', { outlets: {primary: ['edit', dataService.networkSelected.id, givenMapType + dataService.networkSelected.mappings.nodesContinuous.indexOf(map) ]} }]"
-                    class="btn btn-block btn-outline-warning"
-                    data-toggle="tooltip" ngbTooltip="{{'MAIN_MAPPINGS_TT_SINGLE_EDIT' | translate}}"
-                    placement="bottom">
-              <fa-icon [icon]="faEdit"></fa-icon>
-            </button>
-            <button *ngIf="givenMapType.startsWith('e')"
-                    [routerLink]="['', { outlets: {primary: ['edit', dataService.networkSelected.id, givenMapType + dataService.networkSelected.mappings.edgesContinuous.indexOf(map) ]} }]"
-                    class="btn btn-block btn-outline-warning"
-                    data-toggle="tooltip" ngbTooltip="{{'MAIN_MAPPINGS_TT_SINGLE_EDIT' | translate}}"
-                    placement="bottom">
-              <fa-icon [icon]="faEdit"></fa-icon>
-            </button>
-          </th>
-          <th>{{map.title[0]}}</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let entry of map.chart.chartData[0].data; let i = index">
-          <td *ngIf="i === 0" colspan="2">&lt;</td>
-          <td *ngIf="i === map.chart.chartLabels.length - 1" colspan="2">&gt;</td>
-          <td *ngIf="i > 0 && i < map.chart.chartLabels.length - 1"
-              colspan="2">{{map.chart.chartLabels[i]}}</td>
-          <td>{{entry}}</td>
-        </tr>
-        </tbody>
-      </table>
+  <ng-template #discreteOverview>
 
-      <table *ngIf="map && map.gradientValid" class="table table-bordered">
-        <thead>
+    <table class="table table-bordered">
+
+      <thead>
         <tr>
-          <th>{{map.title[1]}}</th>
-          <th>
-            <button *ngIf="givenMapType.startsWith('n')"
-                    [routerLink]="['', { outlets: {primary: ['edit', dataService.networkSelected.id, givenMapType + dataService.networkSelected.mappings.nodesContinuous.indexOf(map) ]} }]"
-                    class="btn btn-block btn-outline-warning"
-                    data-toggle="tooltip" ngbTooltip="{{'MAIN_MAPPINGS_TT_SINGLE_EDIT' | translate}}"
-                    placement="bottom">
-              <fa-icon [icon]="faEdit"></fa-icon>
-            </button>
-            <button *ngIf="givenMapType.startsWith('e')"
-                    [routerLink]="['', { outlets: {primary: ['edit', dataService.networkSelected.id, givenMapType + dataService.networkSelected.mappings.edgesContinuous.indexOf(map) ]} }]"
-                    class="btn btn-block btn-outline-warning"
-                    data-toggle="tooltip" ngbTooltip="{{'MAIN_MAPPINGS_TT_SINGLE_EDIT' | translate}}"
-                    placement="bottom">
-              <fa-icon [icon]="faEdit"></fa-icon>
-            </button>
-          </th>
-          <th>{{map.title[0]}}</th>
+          <th>{{selectedDiscrete.classifier}}</th>
+          <th *ngFor="let val of selectedDiscrete.values" colspan="3">{{val}}</th>
         </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let entry of map.colorGradient; let i = index">
-          <td *ngIf="i === 0" colspan="2">&lt;</td>
-          <td *ngIf="i === map.colorGradient.length - 1" colspan="2">&gt;</td>
-          <td *ngIf="i > 0 && i < map.colorGradient.length - 1" colspan="2">
-            {{entry.numericThreshold}}
+      </thead>
+
+      <tbody>
+        <tr *ngFor="let style of selectedDiscrete.styleMap">
+          <td>{{style.cssKey}}</td>
+          <td *ngFor="let val of style.cssValues">
+            {{val}}
+            <span *ngIf="style.isColor" class="badge-pill badge border" [ngStyle]="{'background-color': val}">&nbsp;</span>
           </td>
+          <!-- EDIT -->
           <td>
-            {{entry.color}}
-            <span [ngStyle]="{'background-color': entry.color}" class="badge badge-pill border">&nbsp;</span>
+            <button [disabled]="true" class="btn btn-block btn-outline-warning">
+              <fa-icon [icon]="faEdit"></fa-icon>
+            </button>
+          </td>
+          <!-- DELETE -->
+          <td>
+            <button [disabled]="true" class="btn btn-block btn-outline-danger">
+              <fa-icon [icon]="faTrash"></fa-icon>
+            </button>
           </td>
         </tr>
-        </tbody>
-      </table>
+      </tbody>
+    </table>
 
-      <div class="table-responsive">
-        <table *ngIf="map && map.classifier" class="table table-bordered">
-          <thead>
-          <th colspan="3">{{map.classifier}}</th>
-          <th *ngFor="let value of map.values">{{value}}</th>
-          </thead>
-          <tbody>
-          <tr *ngFor="let style of map.styleMap" [ngClass]="{'table-info' : (propertyToRemove.style === style)}">
+    <button [disabled]="true"
+            (click)="toggleGlobalRemoveDialogue(selectedDiscrete, typeHint)"
+            class="btn btn-block btn-outline-danger"
+            data-toggle="tooltip" ngbTooltip="{{'MAIN_MAPPINGS_TT_DELETE' | translate}}"
+            placement="bottom">
+      <fa-icon [icon]="faTrash"></fa-icon>
+      {{'MAIN_MAPPINGS_DELETE' | translate}}
+    </button>
 
-            <td><b>{{style.cssKey}}</b></td>
-            <td>
-              <button *ngIf="givenMapType.startsWith('n')"
-                      [routerLink]="['', { outlets: {primary: ['edit', dataService.networkSelected.id, givenMapType + dataService.networkSelected.mappings.nodesDiscrete.indexOf(map), map.styleMap.indexOf(style) ]} }]"
-                      class="btn btn-block btn-outline-warning"
-                      data-toggle="tooltip"
-                      ngbTooltip="{{'MAIN_MAPPINGS_TT_SINGLE_EDIT' | translate}}" placement="bottom"
-                      type="button">
-                <fa-icon [icon]="faEdit"></fa-icon>
-              </button>
-              <button *ngIf="givenMapType.startsWith('e')"
-                      [routerLink]="['', { outlets: {primary: ['edit', dataService.networkSelected.id, givenMapType + dataService.networkSelected.mappings.edgesDiscrete.indexOf(map), map.styleMap.indexOf(style) ]} }]"
-                      class="btn btn-block btn-outline-warning"
-                      data-toggle="tooltip"
-                      ngbTooltip="{{'MAIN_MAPPINGS_TT_SINGLE_EDIT' | translate}}" placement="bottom"
-                      type="button">
-                <fa-icon [icon]="faEdit"></fa-icon>
-              </button>
-            </td>
-            <td>
-              <button (click)="toggleSingleRemoveDialogue(map, givenMapType, style)"
-                      class="btn btn-block btn-outline-danger" data-toggle="tooltip"
-                      ngbTooltip="{{'MAIN_MAPPINGS_TT_SINGLE_DELETE' | translate}}" placement="bottom"
-                      type="button">
-                <fa-icon [icon]="faTrash"></fa-icon>
-              </button>
-            </td>
+  </ng-template>
 
-            <td *ngFor="let value of map.values; let i = index">
+  <ng-template #continuousOverview>
 
-                <span *ngFor="let styleValue of style.cssValues; let j = index">
-                  <span *ngIf="map.selectors[i] === style.selectors[j]">
-                      {{styleValue}}
-                    <span *ngIf="styleValue && styleValue.toString().indexOf('#') > -1"
-                          [ngStyle]="{'background-color': styleValue}"
-                          class="badge badge-pill border">&nbsp;</span>
-                    </span>
-                  </span>
+    <table class="table table-bordered">
 
-            </td>
+      <thead>
+        <tr>
+          <th>{{selectedContinuous.col}}</th>
+          <th>{{selectedContinuous.styleProperty}}</th>
 
-          </tr>
-          </tbody>
-        </table>
-      </div>
+          <!-- EDIT -->
+          <th>
+            <button [disabled]="true" class="btn btn-block btn-outline-warning">
+              <fa-icon [icon]="faEdit"></fa-icon>
+            </button>
+          </th>
 
-      <div *ngIf="map && (map.classifier || map.chartValid || map.gradientValid)" class="mt-3 mb-3">
-        <div>
-          <button (click)="toggleGlobalRemoveDialogue(map, givenMapType)" class="btn btn-block btn-outline-danger"
-                  data-toggle="tooltip" ngbTooltip="{{'MAIN_MAPPINGS_TT_DELETE' | translate}}" placement="bottom">
-            <fa-icon [icon]="faTrash"></fa-icon>
-            {{'MAIN_MAPPINGS_DELETE' | translate}}
-          </button>
-        </div>
-      </div>
+        </tr>
+      </thead>
 
-    </span>
-  </div>
+      <tbody>
+        <tr *ngFor="let thresh of selectedContinuous.thresholds; let index = index">
+          <td *ngIf="index === 0"><</td>
+          <td *ngIf="index > 0 && index < selectedContinuous.thresholds - 1">{{thresh}}</td>
+          <td *ngIf="index === selectedContinuous.thresholds.length - 1">></td>
+
+          <td colspan="2">{{selectedContinuous.equals[index]}}</td>
+        </tr>
+      </tbody>
+
+    </table>
+
+  </ng-template>
+
+
+
+  <!--  <div *ngIf="false">-->
+<!--    <span *ngFor="let map of selectedMapping; let index = index">-->
+
+<!--      <table *ngIf="map && !map.chartValid" class="table table-bordered">-->
+<!--        <thead>-->
+<!--        <tr>-->
+<!--          <th>{{map.title[1]}}</th>-->
+<!--          <th>-->
+<!--            <button *ngIf="typeHint.startsWith('n')"-->
+<!--                    [routerLink]="['', { outlets: {primary: ['edit', dataService.networkSelected.id, typeHint + index ]} }]"-->
+<!--                    class="btn btn-block btn-outline-warning"-->
+<!--                    data-toggle="tooltip" ngbTooltip="{{'MAIN_MAPPINGS_TT_SINGLE_EDIT' | translate}}"-->
+<!--                    placement="bottom">-->
+<!--              <fa-icon [icon]="faEdit"></fa-icon>-->
+<!--            </button>-->
+<!--            <button *ngIf="typeHint.startsWith('e')"-->
+<!--                    [routerLink]="['', { outlets: {primary: ['edit', dataService.networkSelected.id, typeHint + index ]} }]"-->
+<!--                    class="btn btn-block btn-outline-warning"-->
+<!--                    data-toggle="tooltip" ngbTooltip="{{'MAIN_MAPPINGS_TT_SINGLE_EDIT' | translate}}"-->
+<!--                    placement="bottom">-->
+<!--              <fa-icon [icon]="faEdit"></fa-icon>-->
+<!--            </button>-->
+<!--          </th>-->
+<!--          <th>{{map.title[0]}}</th>-->
+<!--        </tr>-->
+<!--        </thead>-->
+<!--        <tbody>-->
+<!--        <tr *ngFor="let entry of map.chart.chartData[0].data; let i = index">-->
+<!--          <td *ngIf="i === 0" colspan="2">&lt;</td>-->
+<!--          <td *ngIf="i === map.chart.chartLabels.length - 1" colspan="2">&gt;</td>-->
+<!--          <td *ngIf="i > 0 && i < map.chart.chartLabels.length - 1"-->
+<!--              colspan="2">{{map.chart.chartLabels[i]}}</td>-->
+<!--          <td>{{entry}}</td>-->
+<!--        </tr>-->
+<!--        </tbody>-->
+<!--      </table>-->
+
+<!--      <table *ngIf="map && map.gradientValid" class="table table-bordered">-->
+<!--        <thead>-->
+<!--        <tr>-->
+<!--          <th>{{map.title[1]}}</th>-->
+<!--          <th>-->
+<!--            <button *ngIf="typeHint.startsWith('n')"-->
+<!--                    [routerLink]="['', { outlets: {primary: ['edit', dataService.networkSelected.id, typeHint + dataService.networkSelected.mappings.nodesContinuous.indexOf(map) ]} }]"-->
+<!--                    class="btn btn-block btn-outline-warning"-->
+<!--                    data-toggle="tooltip" ngbTooltip="{{'MAIN_MAPPINGS_TT_SINGLE_EDIT' | translate}}"-->
+<!--                    placement="bottom">-->
+<!--              <fa-icon [icon]="faEdit"></fa-icon>-->
+<!--            </button>-->
+<!--            <button *ngIf="typeHint.startsWith('e')"-->
+<!--                    [routerLink]="['', { outlets: {primary: ['edit', dataService.networkSelected.id, typeHint + dataService.networkSelected.mappings.edgesContinuous.indexOf(map) ]} }]"-->
+<!--                    class="btn btn-block btn-outline-warning"-->
+<!--                    data-toggle="tooltip" ngbTooltip="{{'MAIN_MAPPINGS_TT_SINGLE_EDIT' | translate}}"-->
+<!--                    placement="bottom">-->
+<!--              <fa-icon [icon]="faEdit"></fa-icon>-->
+<!--            </button>-->
+<!--          </th>-->
+<!--          <th>{{map.title[0]}}</th>-->
+<!--        </tr>-->
+<!--        </thead>-->
+<!--        <tbody>-->
+<!--        <tr *ngFor="let entry of map.colorGradient; let i = index">-->
+<!--          <td *ngIf="i === 0" colspan="2">&lt;</td>-->
+<!--          <td *ngIf="i === map.colorGradient.length - 1" colspan="2">&gt;</td>-->
+<!--          <td *ngIf="i > 0 && i < map.colorGradient.length - 1" colspan="2">-->
+<!--            {{entry.numericThreshold}}-->
+<!--          </td>-->
+<!--          <td>-->
+<!--            {{entry.color}}-->
+<!--            <span [ngStyle]="{'background-color': entry.color}" class="badge badge-pill border">&nbsp;</span>-->
+<!--          </td>-->
+<!--        </tr>-->
+<!--        </tbody>-->
+<!--      </table>-->
+
+<!--      <div class="table-responsive">-->
+<!--        <table *ngIf="map && map.classifier" class="table table-bordered">-->
+<!--          <thead>-->
+<!--          <th colspan="3">{{map.classifier}}</th>-->
+<!--          <th *ngFor="let value of map.values">{{value}}</th>-->
+<!--          </thead>-->
+<!--          <tbody>-->
+<!--          <tr *ngFor="let style of map.styleMap" [ngClass]="{'table-info' : (propertyToRemove.style === style)}">-->
+
+<!--            <td><b>{{style.cssKey}}</b></td>-->
+<!--            <td>-->
+<!--              <button *ngIf="typeHint.startsWith('n')"-->
+<!--                      [routerLink]="['', { outlets: {primary: ['edit', dataService.networkSelected.id, typeHint + dataService.networkSelected.mappings.nodesDiscrete.indexOf(map), map.styleMap.indexOf(style) ]} }]"-->
+<!--                      class="btn btn-block btn-outline-warning"-->
+<!--                      data-toggle="tooltip"-->
+<!--                      ngbTooltip="{{'MAIN_MAPPINGS_TT_SINGLE_EDIT' | translate}}" placement="bottom"-->
+<!--                      type="button">-->
+<!--                <fa-icon [icon]="faEdit"></fa-icon>-->
+<!--              </button>-->
+<!--              <button *ngIf="typeHint.startsWith('e')"-->
+<!--                      [routerLink]="['', { outlets: {primary: ['edit', dataService.networkSelected.id, typeHint + dataService.networkSelected.mappings.edgesDiscrete.indexOf(map), map.styleMap.indexOf(style) ]} }]"-->
+<!--                      class="btn btn-block btn-outline-warning"-->
+<!--                      data-toggle="tooltip"-->
+<!--                      ngbTooltip="{{'MAIN_MAPPINGS_TT_SINGLE_EDIT' | translate}}" placement="bottom"-->
+<!--                      type="button">-->
+<!--                <fa-icon [icon]="faEdit"></fa-icon>-->
+<!--              </button>-->
+<!--            </td>-->
+<!--            <td>-->
+<!--              <button (click)="toggleSingleRemoveDialogue(map, typeHint, style)"-->
+<!--                      class="btn btn-block btn-outline-danger" data-toggle="tooltip"-->
+<!--                      ngbTooltip="{{'MAIN_MAPPINGS_TT_SINGLE_DELETE' | translate}}" placement="bottom"-->
+<!--                      type="button">-->
+<!--                <fa-icon [icon]="faTrash"></fa-icon>-->
+<!--              </button>-->
+<!--            </td>-->
+
+<!--            <td *ngFor="let value of map.values; let i = index">-->
+
+<!--              {{value}} {{i}}-->
+
+<!--&lt;!&ndash;                <span *ngFor="let styleValue of style.cssValues; let j = index">&ndash;&gt;-->
+<!--&lt;!&ndash;                  <span *ngIf="map.selectors[i] === style.selectors[j]">&ndash;&gt;-->
+<!--&lt;!&ndash;                      {{styleValue}}&ndash;&gt;-->
+<!--&lt;!&ndash;                    <span *ngIf="styleValue && styleValue.toString().indexOf('#') > -1"&ndash;&gt;-->
+<!--&lt;!&ndash;                          [ngStyle]="{'background-color': styleValue}"&ndash;&gt;-->
+<!--&lt;!&ndash;                          class="badge badge-pill border">&nbsp;</span>&ndash;&gt;-->
+<!--&lt;!&ndash;                    </span>&ndash;&gt;-->
+<!--&lt;!&ndash;                  </span>&ndash;&gt;-->
+
+<!--            </td>-->
+
+<!--          </tr>-->
+<!--          </tbody>-->
+<!--        </table>-->
+<!--      </div>-->
+
+<!--      <div *ngIf="map && (map.classifier || map.chartValid || map.gradientValid)" class="mt-3 mb-3">-->
+<!--        <div>-->
+<!--          <button (click)="toggleGlobalRemoveDialogue(map, typeHint)" class="btn btn-block btn-outline-danger"-->
+<!--                  data-toggle="tooltip" ngbTooltip="{{'MAIN_MAPPINGS_TT_DELETE' | translate}}" placement="bottom">-->
+<!--            <fa-icon [icon]="faTrash"></fa-icon>-->
+<!--            {{'MAIN_MAPPINGS_DELETE' | translate}}-->
+<!--          </button>-->
+<!--        </div>-->
+<!--      </div>-->
+
+<!--    </span>-->
+<!--  </div>-->
 
   <hr>
 
