[WIP] displaying continuous and discrete mappings preview in sidebar is done, prefix removed for all displays in sidebar, only should be displayed when editing or creating

--- a/src/app/components/parts/chart/chart.component.html
+++ b/src/app/components/parts/chart/chart.component.html
@@ -2,9 +2,9 @@
 <div *ngIf="chartObject.chartType.line">
   <h5>
     <a [routerLink]="['', { outlets: {primary: ['mappings', dataService.networkSelected.id, index]} }]" role="button">
-      <b>{{lookup}}</b>
+      <b>{{mapping.cleanStyleProperty || mapping.styleProperty}}</b>
       {{'SIDEBAR_EDIT_MAPPED_BY' | translate}}
-      <b>{{attribute}}</b>
+      <b>{{mapping.col}}</b>
     </a>
   </h5>
   <canvas [ngStyle]="{'width.%': widthPercent}"
