--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,15 @@
+.full {
+  height: 100vh;
+  max-height: 100vh;
+  width: 100vw;
+  max-width: 100vw;
+}
+
+.scroll {
+  height: 100vh;
+  overflow: scroll;
+}
+
 .drag-bar {
   background-color: #f1f1f1;
   height: 100vh;
