[WIP] spacing and cleanup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <!-- Grey bar -->
-    <div id="drag-wrapper" class="order-2 w-5">
+    <div class="order-2 w-5">
       <div class="drag-bar">
         <div class="btn-group-vertical">
           <button class="btn btn-sm btn-secondary btnLayout" (click)="increaseWidthRight()">
